# AM3352-SOM-EVB_bare_metal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gcc_arm_toolchain.cmake  setup_cmake.bat  setup_cmake.sh
AM3352_SOM_platform/: .ccsproject  .cproject  .project  AM3352_SOM.h  CMakeLists.txt  cpsw.c  dmtimer.c  platform_hs_mmcsd.c  rtc.c  startup_ARMCA8.S  sys_pmu.asm  sysperf.c  uart.c  uartConsole.c  uart_console_interrupts.c
bootloader/: .ccsproject  .cproject  .project  AM335x.lds  CMakeLists.txt  bl_platform.h  boot.cmd
bootloader/.launches/: bootloader.launch
bootloader/targetConfigs/: AM3352.ccxml
ethernet_passthrough/: .ccsproject  .cproject  .project  AM335x.cmd  AM335x.lds  CMakeLists.txt  convert_vcd_to_table.m  ethernet_passthrough_main.c  process_serial_data.m
ethernet_passthrough/targetConfigs/: AM3352.ccxml
gel_files/: AM3352_SOM.gel  AM3352_SOM_bootloader.gel  AM3352_SOM_ethernet.gel  AM3352_SOM_no_ethernet.gel  AM3352_icepick.gel  AM335x_DDR_register_calc_tool_K4B4G1646D.xls  CortexA8_ETB_trigger.gel  LAN8710A_configuration.gel
quick_mmu_enable/: .ccsproject  .cproject  .project  AM335x.cmd  AM335x.lds  CMakeLists.txt  quick_mmu_enable.c
quick_mmu_enable/.launches/: quick_mmu_enable.launch
quick_mmu_enable/targetConfigs/: AM3352.ccxml
sdram_test/: .ccsproject  .cproject  .project  AM335x.cmd  AM335x.lds  CMakeLists.txt  sdram_test_main.c
sdram_test/.launches/: sdram_test.launch
sdram_test/targetConfigs/: AM3352.ccxml
source/: .cproject  .project  README.md  setup_cmake.bat  setup_cmake.sh
source/AM3352_SOM_platform/: AM3352_SOM.h  CMakeLists.txt  sys_pmu.asm  uart.c  uart_console_blocking.c
source/bootloader/: CMakeLists.txt  bl_platform.c
source/ethernet_passthrough/: CMakeLists.txt  process_serial_data.m
source/ethernet_passthrough/targetConfigs/: AM3352.ccxml
source/gel_files/: AM3352_SOM.gel  AM3352_SOM_bootloader.gel
source/quick_mmu_enable/: AM335x.lds
source/sdram_test/: CMakeLists.txt
source/sdram_test/targetConfigs/: AM3352.ccxml
